# r1crossencode

./: 3_cfg.json  README.md  WORKING_GEMMA_CROSSCODER_WITH_HUGGINGFACE.ipynb  copy_of_crosscoder_model_diff.py  copy_of_sae.py  goodfire_open_source_sae_demo (1).py  pyproject.toml  r1_crosscoder.py  step8b.mp3.asd  untitled39.py  uts-grs-research-degree-application-cv-template.docx
SwitchResX Installer.app/Contents/: CodeResources  Info.plist
SwitchResX Installer.app/Contents/MacOS/: SwitchResX Installer
SwitchResX Installer.app/Contents/PlugIns/SwitchResX.prefPane/Contents/: Info.plist
SwitchResX Installer.app/Contents/PlugIns/SwitchResX.prefPane/Contents/MacOS/: SwitchResX
SwitchResX Installer.app/Contents/PlugIns/SwitchResX.prefPane/Contents/Resources/: Assets.car
SwitchResX Installer.app/Contents/_CodeSignature/: CodeResources
crosscoder-model-diff-replication/: analysis.py  buffer.py  crosscoder.py  train.py  trainer.py  utils.py
examples/: direct_sae_vis_example.py
open source crosscoders/: Open Source Replication of Anthropic’s Crosscoder paper for model-diffing — LessWrong.md
sae_vis_adapter/: README.md  __init__.py  adapter.py  colab_import_fix.py  colab_setup_instructions.py  main.py  observable_model.py  requirements.txt  sae_vis_compat.py  transformer_lens_adapter.py  utils.py  visualization.py
unsloth/DeepSeek-R1-Distill-Qwen-14B-unsloth-bnb-4bit/: config.json  generation_config.json
unsloth/Qwen2.5-14B-bnb-4bit/: config.json  generation_config.json
(+76 files in other folders)
