[tool.poetry]
name = "r1crossencode"
version = "0.1.0"
description = ""
authors = ["Jack Payne <jacktpayne51@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nnsight = "^0.4.1"
bitsandbytes = "0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
